--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -40,7 +40,7 @@ jobs:
           cd doc && doxygen
       - name: Install dependencies (non-Python, macOS)
         if: runner.os == 'macOS'
-        run: brew install eigen xtensor
+        run: brew install eigen ninja xtensor
       - name: Install dependencies (Python)
         run: |
           pip install --upgrade pip
@@ -82,7 +82,7 @@ jobs:
       - uses: actions/checkout@v2
       - name: Install dependencies
         run: |
-          sudo apt-get -y install libeigen3-dev python3-pip
+          sudo apt-get -y install libeigen3-dev ninja-build python3-pip
           sudo python3 -m pip install scikit-build pybind11 cmake
           wget https://github.com/xtensor-stack/xtl/archive/0.7.2.tar.gz -O xtl-0.7.2.tar.gz
           tar xf xtl-0.7.2.tar.gz
@@ -104,7 +104,7 @@ jobs:
       - uses: actions/checkout@v2
       - name: Install dependencies
         run: |
-          sudo apt-get -y install libeigen3-dev python3-pip
+          sudo apt-get -y install libeigen3-dev ninja-build python3-pip
           sudo python3 -m pip install scikit-build pybind11 cmake
           wget https://github.com/xtensor-stack/xtl/archive/0.7.2.tar.gz -O xtl-0.7.2.tar.gz
           tar xf xtl-0.7.2.tar.gz
