--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,10 +1,14 @@
 cmake_minimum_required(VERSION 3.16)
 
 project(basix VERSION "0.0.1")
-set(CMAKE_BUILD_TYPE Debug)
 
 # Define CMAKE_INSTALL_xxx: LIBDIR, INCLUDEDIR
 include(GNUInstallDirs)
+
+# Set C++ standard
+set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+set(CMAKE_CXX_EXTENSIONS OFF)
 
 set(CMAKE_BUILD_TYPE Debug)
 
@@ -19,10 +23,6 @@ endif()
 set(Python_FIND_IMPLEMENTATIONS CPython PyPy)
 find_package(Python REQUIRED COMPONENTS Interpreter Development)
 
-# Set C++ standard before finding pybind11
-set(CMAKE_CXX_STANDARD 17)
-set(CMAKE_CXX_STANDARD_REQUIRED ON)
-set(CMAKE_CXX_EXTENSIONS OFF)
 
 # Get pybind11 CMake dir
 execute_process(
@@ -43,17 +43,22 @@ find_package(Eigen3 REQUIRED)
 message(STATUS "Found Eigen ${EIGEN3_INCLUDE_DIRS}")
 include_directories(SYSTEM ${EIGEN3_INCLUDE_DIRS})
 
+
+find_package(pybind11 CONFIG REQUIRED)
+
+add_subdirectory(cpp)
+
+# -- xtensor packages (https://github.com/xtensor-stack)
 find_package(xtl REQUIRED)
 find_package(xtensor REQUIRED)
 # find_package(xtensor-blas HINTS ${XTENSOR_BLAS_ROOT} $ENV{XTENSOR_BLAS_ROOT} REQUIRED)
 # find_package(BLAS)
 # find_package(LAPACK)
+target_include_directories(basix SYSTEM PRIVATE ${xtensor_INCLUDE_DIRS})
+target_include_directories(basix SYSTEM PRIVATE ${xtl_INCLUDE_DIRS})
+# target_link_libraries(basix PRIVATE BLAS::BLAS)
+# target_link_libraries(basix PRIVATE LAPACK::LAPACK)
 
-
-
-find_package(pybind11 CONFIG REQUIRED)
-
-add_subdirectory(cpp)
 
 pybind11_add_module(_basixcpp MODULE cpp/wrapper.cpp)
 
@@ -61,11 +66,8 @@ set_target_properties(_basixcpp PROPERTIES SKIP_BUILD_RPATH FALSE)
 set_target_properties(_basixcpp PROPERTIES BUILD_WITH_INSTALL_RPATH TRUE)
 set_target_properties(_basixcpp PROPERTIES INSTALL_RPATH_USE_LINK_PATH TRUE)
 
-target_include_directories(basix SYSTEM PRIVATE ${xtensor_INCLUDE_DIRS})
-target_include_directories(basix SYSTEM PRIVATE ${xtl_INCLUDE_DIRS})
-# target_link_libraries(basix PRIVATE BLAS::BLAS)
-# target_link_libraries(basix PRIVATE LAPACK::LAPACK)
 
+# Add xtensor targets
 target_include_directories(_basixcpp SYSTEM PRIVATE ${xtensor_INCLUDE_DIRS})
 target_include_directories(_basixcpp SYSTEM PRIVATE ${xtl_INCLUDE_DIRS})
 # target_link_libraries(_basixcpp PRIVATE BLAS::BLAS)
