--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,9 +9,18 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 
 
+# TODO: Replace hardwiring
+# Configure compiler
+# Note: -Wno-comment is added to avoid warning/errors for LaTeX code
+# with backslashes on Doxygen comments
+include(CheckCXXCompilerFlag)
+CHECK_CXX_COMPILER_FLAG("-Wall -Werror -Wno-comment" HAVE_EXTRA_FLAGS)
+if (HAVE_EXTRA_FLAGS)
+  set(CMAKE_CXX_FLAGS "-Wall -Werror -Wno-comment ${CMAKE_CXX_FLAGS}")
+endif()
+
 # Options
 include(FeatureSummary)
-
 option(BUILD_SHARED_LIBS "Build Basix with shared libraries." ON)
 add_feature_info(BUILD_SHARED_LIBS BUILD_SHARED_LIBS "Build Basix with shared libraries.")
 
@@ -74,75 +83,27 @@ set(CPP_elements
 
 # Configure the library
 add_library(basix ${CPP_core} ${CPP_elements} cpp/basix.cpp)
-target_include_directories(basix PRIVATE ./cpp)
-target_include_directories(basix PRIVATE ${EIGEN3_INCLUDE_DIRS})
 set_target_properties(basix PROPERTIES PUBLIC_HEADER cpp/basix.h)
+target_include_directories(basix PUBLIC
+                           $<INSTALL_INTERFACE:include>
+                           "$<BUILD_INTERFACE:${CMAKE_SOURCE_DIR};${CMAKE_SOURCE_DIR}/cpp>")
+
+# Add dependencies to target
+target_include_directories(basix PRIVATE ${EIGEN3_INCLUDE_DIRS})
 
 # Install the Basix library
 install(TARGETS basix
-EXPORT BasixTargets
-RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR} COMPONENT RuntimeExecutables
-LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR} COMPONENT RuntimeLibraries
-ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR} COMPONENT Development)
+  EXPORT BasixTargets
+  RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR} COMPONENT RuntimeExecutables
+  LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR} COMPONENT RuntimeLibraries
+  ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR} COMPONENT Development)
 
 # Install CMake helpers
 include(CMakePackageConfigHelpers)
-write_basic_package_version_file(BasixConfigVersion.cmake VERSION ${PACKAGE_VERSION}
-                                 COMPATIBILITY AnyNewerVersion)
+write_basic_package_version_file(BasixConfigVersion.cmake VERSION ${PACKAGE_VERSION} COMPATIBILITY AnyNewerVersion)
+configure_package_config_file(BasixConfig.cmake.in ${CMAKE_BINARY_DIR}/BasixConfig.cmake INSTALL_DESTINATION lib/cmake/basix)
+
+install(FILES ${CMAKE_BINARY_DIR}/BasixConfig.cmake ${CMAKE_BINARY_DIR}/BasixConfigVersion.cmake
+        DESTINATION lib/cmake/basix COMPONENT Development)
+
 install(EXPORT BasixTargets FILE BasixTargets.cmake NAMESPACE Basix:: DESTINATION lib/cmake/basix)
-
-
-# target_link_libraries (helloDemo LINK_PUBLIC Hello)
-
-# Define CMAKE_INSTALL_xxx: LIBDIR, INCLUDEDIR
-# include(GNUInstallDirs)
-
-# # Currently, Scikit-build does not support FindPython, so we convert the
-# # provided hints ourselves.
-# if(SKBUILD)
-#    set(Python_EXECUTABLE "${PYTHON_EXECUTABLE}")
-#    set(Python_INCLUDE_DIR "${PYTHON_INCLUDE_DIR}")
-#    set(Python_LIBRARY "${PYTHON_LIBRARY}")
-# endif()
-
-# set(Python_FIND_IMPLEMENTATIONS CPython PyPy)
-# find_package(Python REQUIRED COMPONENTS Interpreter Development)
-
-
-# # Get pybind11 CMake dir
-# execute_process(
-#   COMMAND
-#     "${Python_EXECUTABLE}" -c
-#     "import pybind11; print(pybind11.get_cmake_dir())"
-#   OUTPUT_VARIABLE _tmp_cmake_dir
-#   OUTPUT_STRIP_TRAILING_WHITESPACE COMMAND_ECHO STDOUT ECHO_OUTPUT_VARIABLE
-#   ECHO_ERROR_VARIABLE)
-# list(APPEND CMAKE_PREFIX_PATH "${_tmp_cmake_dir}")
-
-# find_package(Eigen3 REQUIRED)
-# message(STATUS "Found Eigen ${EIGEN3_INCLUDE_DIRS}")
-# include_directories(SYSTEM ${EIGEN3_INCLUDE_DIRS})
-
-# # Now we can find pybind11
-# find_package(pybind11 CONFIG REQUIRED)
-
-# add_subdirectory(cpp)
-
-# pybind11_add_module(_basixcpp MODULE cpp/wrapper.cpp)
-
-# set_target_properties(_basixcpp PROPERTIES SKIP_BUILD_RPATH FALSE)
-# set_target_properties(_basixcpp PROPERTIES BUILD_WITH_INSTALL_RPATH TRUE)
-# set_target_properties(_basixcpp PROPERTIES INSTALL_RPATH_USE_LINK_PATH TRUE)
-
-# if (APPLE)
-#   set_target_properties(_basixcpp PROPERTIES INSTALL_RPATH "@loader_path/lib")
-# else()
-#   set_target_properties(_basixcpp PROPERTIES INSTALL_RPATH "$ORIGIN/lib")
-# endif()
-
-# target_link_libraries(_basixcpp PRIVATE pybind11::module basix)
-
-# set_target_properties(basix PROPERTIES PUBLIC_HEADER "cpp/basix.h")
-
-# install(TARGETS _basixcpp DESTINATION .)
-# install(TARGETS basix LIBRARY DESTINATION lib PUBLIC_HEADER DESTINATION include)
