Install public header

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -95,6 +95,7 @@ target_include_directories(basix PRIVATE ${EIGEN3_INCLUDE_DIRS})
 # Install the Basix library
 install(TARGETS basix
   EXPORT BasixTargets
+  PUBLIC_HEADER DESTINATION include
   RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR} COMPONENT RuntimeExecutables
   LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR} COMPONENT RuntimeLibraries
   ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR} COMPONENT Development)
