Capitalise project name

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.18)
 
 # Set the version
-project(basix VERSION "0.0.1" LANGUAGES CXX)
+project(Basix VERSION "0.0.1" LANGUAGES CXX)
 include(GNUInstallDirs)
 
 # Set the C++ standard
