--- a/python/CMakeLists.txt
+++ b/python/CMakeLists.txt
@@ -18,7 +18,7 @@ find_package(pybind11 REQUIRED CONFIG HINTS ${PYBIND11_DIR} ${PYBIND11_ROOT}
 # Create the binding library
 pybind11_add_module(cpp SHARED wrapper.cpp)
 
-target_include_directories(cpp PRIVATE ${EIGEN3_INCLUDE_DIRS} "../cpp")
+target_include_directories(cpp PRIVATE ${EIGEN3_INCLUDE_DIRS} "${CMAKE_CURRENT_SOURCE_DIR}/../cpp")
 
 # Add srict compiler flags
 include(CheckCXXCompilerFlag)
