Put pybind back in

--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -26,6 +26,7 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install -y libeigen3-dev doxygen
+          sudo python3 -m pip install pybind11
       - name: Build documentation (Linux)
         if: runner.os == 'Linux'
         run: |
