--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -26,8 +26,8 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install -y libeigen3-dev doxygen
-          sudo python3 -m pip install pybind11
-          python3 -c 'import pybind11; print(pybind11.get_cmake_dir())'
+          sudo pip install pybind11
+          python -c 'import pybind11; print(pybind11.get_cmake_dir())'
       - name: Build documentation (Linux)
         if: runner.os == 'Linux'
         run: |
