--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -27,6 +27,7 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y libeigen3-dev doxygen
           sudo pip install -vv pybind11
+          pip show -f pybind11
           python -c 'import sys; print(sys.path)'
           python -c 'import pybind11; print(pybind11.get_cmake_dir())'
       - name: Build documentation (Linux)
