--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -26,10 +26,7 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install -y libeigen3-dev doxygen
-          pip install -vv pybind11
-          pip show -f pybind11
-          python -c 'import sys; print(sys.path)'
-          python -c 'import pybind11; print(pybind11.get_cmake_dir())'
+          pip install pybind11
       - name: Build documentation (Linux)
         if: runner.os == 'Linux'
         run: |
