--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -21,6 +21,7 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: ${{ matrix.python-version }}
+      - name: Install pybind11
         run:
           pip install pybind11
       - name: Install dependencies (non-Python, Linux)
@@ -28,7 +29,6 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install -y libeigen3-dev doxygen
-          # pip install pybind11
       - name: Build documentation (Linux)
         if: runner.os == 'Linux'
         run: |
