Change name to match

--- a/python/CMakeLists.txt
+++ b/python/CMakeLists.txt
@@ -23,24 +23,24 @@ find_package(pybind11 REQUIRED CONFIG HINTS ${PYBIND11_DIR} ${PYBIND11_ROOT}
   $ENV{PYBIND11_DIR} $ENV{PYBIND11_ROOT})
 
 # Create the binding library
-pybind11_add_module(cpp SHARED wrapper.cpp)
+pybind11_add_module(_basixcpp SHARED wrapper.cpp)
 
-target_include_directories(cpp PRIVATE ${EIGEN3_INCLUDE_DIRS})
+target_include_directories(_basixcpp PRIVATE ${EIGEN3_INCLUDE_DIRS})
 
 # Add srict compiler flags
 include(CheckCXXCompilerFlag)
 CHECK_CXX_COMPILER_FLAG("-Wall -Werror -Wno-comment -pedantic" HAVE_PEDANTIC)
 if (HAVE_PEDANTIC)
-  target_compile_options(cpp PRIVATE -Wall;-Werror;-Wno-comment;-pedantic)
+  target_compile_options(_basixcpp PRIVATE -Wall;-Werror;-Wno-comment;-pedantic)
 endif()
 
 # In Debug mode override pybind11 symbols visibility
 # Symbols must be visible to backtrace_symbols() to produce nice logs
 if (CMAKE_BUILD_TYPE STREQUAL "Debug")
-  target_compile_options(cpp PRIVATE "-fvisibility=default")
+  target_compile_options(_basixcpp PRIVATE "-fvisibility=default")
 endif()
 
 # Add libraries and other config
-target_link_libraries(cpp PRIVATE pybind11::module)
-target_link_libraries(cpp PUBLIC Basix::basix)
+target_link_libraries(_basixcpp PRIVATE pybind11::module)
+target_link_libraries(_basixcpp PUBLIC Basix::basix)
 
