--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -109,7 +109,9 @@ target_include_directories(basix PUBLIC
 
 # Add dependencies to target
 target_include_directories(basix SYSTEM PRIVATE ${EIGEN3_INCLUDE_DIRS})
-target_link_libraries(basix PRIVATE xtl)
+# target_include_directories(basix SYSTEM PRIVATE ${xtl_INCLUDE_DIRS})
+# target_include_directories(basix SYSTEM PUBLIC ${xtensor_INCLUDE_DIRS})
+# target_link_libraries(basix SYSTEM PRIVATE xtl)
 target_link_libraries(basix PUBLIC xtensor)
 
 # # Temp fix
