--- a/python/CMakeLists.txt
+++ b/python/CMakeLists.txt
@@ -1,7 +1,13 @@
 cmake_minimum_required(VERSION 3.18)
 
-PROJECT(basix_pybind11)
+PROJECT(basix_pybind11 VERSION "0.0.1")
 
+# Set C++ standard
+set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+set(CMAKE_CXX_EXTENSIONS OFF)
+
+# Find dependencies
 find_package(Eigen3 REQUIRED)
 message(STATUS "Found Eigen ${EIGEN3_INCLUDE_DIRS}")
 
@@ -16,33 +22,26 @@ find_package(Basix REQUIRED)
 # )
 # FetchContent_MakeAvailable(basixcpp)
 
-# Set C++ standard before finding pybind11
-set(CMAKE_CXX_STANDARD 17)
-set(CMAKE_CXX_STANDARD_REQUIRED ON)
-set(CMAKE_CXX_EXTENSIONS OFF)
-
 find_package(pybind11 REQUIRED CONFIG HINTS ${PYBIND11_DIR} ${PYBIND11_ROOT}
   $ENV{PYBIND11_DIR} $ENV{PYBIND11_ROOT})
 
 # Create the binding library
 pybind11_add_module(_basixcpp SHARED wrapper.cpp)
-
 target_include_directories(_basixcpp PRIVATE ${EIGEN3_INCLUDE_DIRS})
+target_link_libraries(_basixcpp PRIVATE pybind11::module)
+target_link_libraries(_basixcpp PUBLIC Basix::basix)
 
 # Add srict compiler flags
 include(CheckCXXCompilerFlag)
-CHECK_CXX_COMPILER_FLAG("-Wall -Werror -Wno-comment -pedantic" HAVE_PEDANTIC)
+CHECK_CXX_COMPILER_FLAG("-Wall -Werror  -Wextra -Wno-comment -pedantic" HAVE_PEDANTIC)
 if (HAVE_PEDANTIC)
   target_compile_options(_basixcpp PRIVATE -Wall;-Werror;-Wno-comment;-pedantic)
 endif()
 
-# In Debug mode override pybind11 symbols visibility
-# Symbols must be visible to backtrace_symbols() to produce nice logs
+# In Debug mode override pybind11 symbols visibility Symbols must be
+# visible to backtrace_symbols() to produce nice logs
 if (CMAKE_BUILD_TYPE STREQUAL "Debug")
   target_compile_options(_basixcpp PRIVATE "-fvisibility=default")
 endif()
 
-# Add libraries and other config
-target_link_libraries(_basixcpp PRIVATE pybind11::module)
-target_link_libraries(_basixcpp PUBLIC Basix::basix)
 
