--- a/python/CMakeLists.txt
+++ b/python/CMakeLists.txt
@@ -29,8 +29,8 @@ find_package(pybind11 REQUIRED CONFIG HINTS ${PYBIND11_DIR} ${PYBIND11_ROOT}
 pybind11_add_module(_basixcpp SHARED wrapper.cpp)
 target_include_directories(_basixcpp PRIVATE ${EIGEN3_INCLUDE_DIRS})
 target_link_libraries(_basixcpp PRIVATE pybind11::module)
-# target_link_libraries(_basixcpp PUBLIC Basix::basix)
-target_link_libraries(_basixcpp PUBLIC basix)
+target_link_libraries(_basixcpp PUBLIC Basix::basix)
+# target_link_libraries(_basixcpp PUBLIC basix)
 
 # Add strict compiler flags
 include(CheckCXXCompilerFlag)
